--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GithubAPI</string>
+    <string name="dummy_user_name">User name</string>
+    <string name="next">Next</string>
+    <string name="back">Back</string>
 </resources>
